# scene-ai

./: .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.cjs  AGENTS.md  LICENSE  PRIVACY_NOTICE.md  README.md  README.zh-CN.md  docker-compose.yml  dump.rdb  ecosystem.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/desktop-tauri/: package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: main.rs
apps/web-nuxt/: .env.example  .gitignore  eslint.config.mjs  nuxt.config.ts  package.json  playwright.config.ts  vitest.config.ts
docs/: 快速启动.md  技术可行性评估报告-重构为Vue3+Nuxt4+LangChat+Langflow技术栈.md  数据库与服务端连接.md  架构说明.md  演示流程.md  生产部署.md  知识库治理.md  路线图.md  运营监控.md  配置说明.md  项目启动常见问题.md  项目部署实施指南.md
docs/todo/: 26.1.1-Vue3-Nuxt4-迁移后清理开发计划.md  26.1.1-开发计划.md  extensions-迁移计划.md  vue-nuxt4-渐进式迁移开发计划.md  技术栈重构开发计划-Vue3+Nuxt4+Langflow.md
extensions/infinite-canvas/: eslint.config.mjs  index.html  manifest.json  package.json  tsconfig.api.json  tsconfig.json  tsconfig.web.json  tsup.config.ts  vite.config.ts
extensions/simple-blog/: LICENSE  eslint.config.mjs  index.html  manifest.json  (+4 more)
public/: index.html
scripts/: client-editor-lazy.test.mjs  copy-extension-build.mjs  cors-origin.test.mjs  deploy.sh  extension-frame-url.test.mjs  infinite-canvas-compat.test.mjs  migration-schema.json  patch-legacy-extensions.mjs  release.mjs  simple-blog-routes-lazy.test.mjs  sync-env.mjs  sync-env.test.mjs  sync-skills.mjs
skills/: README.md  README.zh-CN.md
(+856 files in other folders)
